[package]
name = "codas-flow"
description = "Low-latency, high-throughput bounded queues (\"data flows\") for (a)synchronous and event-driven systems."
categories = [
    "concurrency",
    "network-programming", 
    "no-std",
]
keywords = [
    "codas", 
    "lock-free", 
    "ring-buffer", 
    "event-driven", 
    "actor"
]
readme = "README.md"
license = "MIT"
version = "0.7.1"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
repository.workspace = true

[package.metadata.release]
release = true

[package.metadata.docs.rs]
# Generate documentation with all features enabled
all-features = true

[features]
default = []

[dependencies]
codas.workspace = true
snafu.workspace = true

# no_std compatible atomics.
portable-atomic = { version = "1.3", default-features = false, features = ["require-cas"] }
portable-atomic-util = { version = "0.2.4", default-features = false, features = ["alloc"] }

[dev-dependencies]
tokio.workspace = true
criterion.workspace = true

# Crossfire is used as a benchmark comparison.
crossfire = "3.1.7"

# Disruptor is used as a benchmark comparison.
disruptor = "4.0.0"

[[bench]]
name = "channels"
harness = false
